Revision history for Perl extension Coro.

TODO: should explore PerlIO::via::CoroCede and PerlIO::via::CoroAIO.
TODO: maybe implement a default message channel, very much like Erlang
      (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).

4.35 Sun Jan 13 04:14:13 CET 2008
	- "bt" debug command now displays any exceptions
          from longmess and also skips the innermost
          stackframes, giving more useufl output.
	- allow backtraces in coroutines blocked in Coro::EV,
          at a <1% speed hit.
        - handle localising of $SIG{__WARN__} and __DIE__
          properly (with a proepr amount of dirty hacking).

4.34 Sat Dec 22 17:49:53 CET 2007
	- upgrade to EV version 2.0 API.

4.33 Mon Dec 17 08:36:12 CET 2007
	- make Coro::AIO etc. loadable in the absence of EV.

4.32 Mon Dec 17 07:46:02 CET 2007
	- majorly improved Coro::Handle's performance with Coro::EV.
        - implemented the until now mythical Coro::BDB module.
        - specialcase EV in Coro::AIO and Coro::BDB for extra speed.

4.31 Wed Dec  5 12:32:39 CET 2007
	- remove warn statement form Coro::Util.

4.3  Tue Dec  4 20:33:14 CET 2007
	- calls to the idle function could cause stack corruption
          when the stack changed.
	- do no longer rely on the presence of EV::DNS if EV is used
          (because it is gone), but instead take avdantage of EV::ADNS
          if available.
        - add ($) prototypes to all functions in Coro::Storable.
        - use a conventional (safer) idle callback in Coro::EV.
        - do accept quickly in Coro::Debug to avoid endless loops.

4.22 Fri Nov 30 16:04:04 CET 2007
	- really use optimised versions for Event and EV in Coro::Util
          and Coro::Handle.

4.21 Sun Nov 25 10:48:59 CET 2007
	- fix a spurious memory read.
        - Coro::EV no longer keeps the eventloop "alive".

4.2  Fri Nov  9 20:47:05 CET 2007
	- enable/disable tracing from a new coroutine, not a pooled one.